--- a/remember-practice/package.json
+++ b/remember-practice/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.7"
